# his-system

./: .dockerignore  .gitignore  BLOG.md  CLAUDE.md  LICENSE  README  README.md  ai_service.py  config.py  content_filter.py  database.py  docker-compose.yml  main.py  migrate_kb_to_qdrant.py  models.py  package-lock.json  privacy.py  pyproject.toml  rag_engine.py  rag_service.py  redis_cache.py  requirements.txt  routers.py  schemas.py  seed.py  test_recording.webm
.claude/: settings.local.json
.history/: .env_20260507152811  .env_20260507154653  .env_20260507170709  .env_20260509130310  .env_20260609104411  .env_20260609234727  .env_20260610175737  .env_20260611222556  .gitignore_20260612220400  CLAUDE_20260531094532.md  Dockerfile_20260611170607  Dockerfile_20260611185314  Dockerfile_20260611185446  Dockerfile_20260611190809  Dockerfile_20260611193249  Dockerfile_20260611195024  Dockerfile_20260611200506  Dockerfile_20260611212652  Dockerfile_20260611220015  README_20260507135725  ai_service_20260507135725.py  ai_service_20260521222634.py  ai_service_20260521223004.py  ai_service_20260609103550.py  ai_service_20260609104412.py  ai_service_20260609104610.py  ai_service_20260609183120.py  ai_service_20260609183537.py  ai_service_20260609184007.py  ai_service_20260609184328.py  ai_service_20260609185109.py  ai_service_20260609191318.py  ai_service_20260609192111.py  ai_service_20260609192305.py  ai_service_20260609192502.py  ai_service_20260609193026.py  ai_service_20260609223711.py  ai_service_20260609223833.py  ai_service_20260609230138.py  ai_service_20260609231000.py  (+89 more)
(+144 files in other folders)
