[project]
name = "hospital-information-system"
version = "1.0.0"
description = "医院信息系统 (HIS) - Hospital Information System"
authors = [{ name = "HIS Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pymysql>=1.1.1",
    "aiomysql>=0.2.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",  # 锁定到 passlib 兼容的最后一个版本
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "dashscope>=1.20.0",
    "alembic>=1.13.1",
    "redis>=5.0.4",
    "celery>=5.4.0",
    "loguru>=0.7.2",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    # AI Engine: LangChain / LangGraph / Qdrant
    "langchain>=0.2.0",
    "langgraph>=0.1.0",
    "langchain-community>=0.2.0",
    "qdrant-client>=1.9.0",
    "langchain-qdrant>=1.0.0",
    "langchain-text-splitters>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "black>=24.4.2",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"  # 正确配置方式
